--- a/TCPserverApp/TCPserverApp/TCPserverApp.csproj
+++ b/TCPserverApp/TCPserverApp/TCPserverApp.csproj
@@ -52,9 +52,10 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Helper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TcpConnections.cs" />
+    <Compile Include="TcpConnection.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
